1597986005 | 26 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_dutch.json,  M resources/webinterface/dashboard/localization/bindingui_korean.json,  M resources/webinterface/dashboard/localization/bindingui_swedish.json,  M resources/webinterface/dashboard/localization/dashboard_danish.json,  M resources/webinterface/dashboard/localization/vrmonitor_brazilian.json,  M resources/webinterface/dashboard/localization/vrmonitor_korean.json,  M resources/webinterface/dashboard/localization/vrmonitor_latam.json,  M resources/webinterface/dashboard/localization/vrmonitor_romanian.json,  M resources/webinterface/dashboard/localization/webhelper_finnish.json,  M resources/webi
https://steamdb.info/patchnotes/5440779/

--- a/resources/webinterface/dashboard/localization/bindingui_dutch.json
+++ b/resources/webinterface/dashboard/localization/bindingui_dutch.json
@@ -123,7 +123,7 @@
   "SourceInputMode_SmoothScroll_Multiplier_tooltip": "Hoeveel elke beweging zal scrollen.",
   "SourceInputMode_SmoothScroll_AccelerationPower_tooltip": "Hoe snel het scrollen zal versnellen",
   "SourceInputMode_SmoothScroll_NotchesPerTouchpad_tooltip": "Hoe vaak moet de haptische feedback afgaan wanneer je vinger over de lengte van het touchpad glijdt.",
-  "SourceInputMode_SmoothScroll_StartDistance_tooltip": "Het minimale aantal dat je nodig hebt om te scrollen zodat er een waarde wordt gemeld.",
+  "SourceInputMode_SmoothScroll_StartDistance_tooltip": "De minimale hoeveelheid die je moet scrollen zodat er een waarde wordt gemeld.",
   "SourceInputMode_SmoothScroll_MinThrowVelocity_tooltip": "De minimumsnelheid waarmee je het touchpad kunt aanraken.",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity_tooltip": "De maximale snelheid waarmee de besturing kan scrollen.",
   "SourceInputMode_SmoothScroll_Deceleration_tooltip": "Hoe snel het scrollen zal vertragen.",
@@ -132,15 +132,15 @@
   "SourceInputMode_SmoothScroll_ThrownTerminationVelocity_tooltip": "De maximale snelheid die een beweging kan hebben.",
   "SourceInputMode_SmoothScroll_EdgeScrollThreshold_tooltip": "Hoe dicht bij de rand 'randscrollen' activeert",
   "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias_tooltip": "Met hoeveel de verticale rand te compenseren.",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity_tooltip": "Hoe snel zullen randen scrollen.",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity_tooltip": "Hoe snel randen zullen scrollen.",
   "SourceInputMode_SmoothScroll_EdgeMinSwipe_tooltip": "Het minimale aantal keer dat je kunt scrollen om de randscrollenmodus te activeren.",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio_tooltip": "De minimumverhouding zijdelingse beweging die nodig is om horizontaal scrollen te activeren.",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude_tooltip": "De minimumhoeveelheid wijzigingen in de bediening om te scrollen.",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude_tooltip": "De minimumhoeveelheid wijzigingen in de bediening om te beginnen scrollen.",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor_tooltip": "Hoeveel elke beweging zal scrollen.",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart_tooltip": "Krijg haptische feedback na contact met vinger.",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart_tooltip": "Krijg haptische tril na contact met vinger.",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock_tooltip": "Vergrendelt scollrichting naar algemene beweging (bv. tegenhouden van achteruit scrollen bij beweging).",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "Nodige afstand voor eerste scroll.",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "Nodige afstand voor volgende scrolls.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "Nodige afstand voor eerste scrollbeweging.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "Nodige afstand voor volgende scrollbewegingen.",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal_tooltip": "Nodige afstand om de scrollrichting om te keren.",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch_tooltip": "Directe manipulatiegevoeligheid van de eerste scrollbeweging.",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove_tooltip": "Directe manipulatiegevoeligheid van de volgende scrollbewegingen.",
@@ -149,16 +149,16 @@
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold_tooltip": "De minimale afstand een beweging te herkennen.",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier_tooltip": "De kracht van bewegingsgegenereerde scrolls.",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed_tooltip": "De snelheid waaraan bewegingen vertragen.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "Doorlopend scrollen inschakelen na he glijden naar de randen en vasthouden.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "The power of each held scroll tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "How fast a held scroll will tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "The area of the trackpad at the top that scroll holds will engage.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "The area of the trackpad at the bottom that scroll holds will engage.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "Generate haptic pulses for held scroll ticks.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "Doorlopend scrollen inschakelen na het glijden naar de randen en vasthouden.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "De kracht van iedere vastgehouden scoll.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "Hoe snel een vastgehouden scroll zal bewegen.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "Het bovenste gebied van de trackpad dat door het vasthouden van scrolls wordt geactiveerd.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "Het onderste gebied van de trackpad dat door het vasthouden van scrolls wordt geactiveerd.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "Genereer haptische trillen voor vastgehouden scrolls.",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "Hoe snel te scrollen.",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor_tooltip": "Hoeveel te scrollen bij elke toename.",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "The side to side percentage that the stick will not scroll.",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "The top to bottom percentage that the stick will not scroll.",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "Het zijdelingse percentage tot waar de stick niet zal scrollen.",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "Het hoogste en laagste percentage tot waar de stick niet zal scrollen.",
   "SourceInputMode_ScrollMode": "Scrollmodus:",
   "SourceInputMode_ScrollMode_Smooth": "Soepel (zoals een trackpad)",
   "SourceInputMode_ScrollMode_Discrete": "Discreet (zoals een muiswiel)",
@@ -207,7 +207,7 @@
   "SourceInputMode_StickyClick": "Analoge stick ingedrukt houden terwijl je hem in een richting beweegt",
   "SourceInputMode_StickyClick_Activate": "Drempel waarbij een richting wordt geactiveerd",
   "SourceInputMode_StickyClick_Deactivate": "Drempel waarbij een richting wordt gedeactiveerd",
-  "SourceInputMode_TouchyClick": "Keep button clicked as long as it's touched",
+  "SourceInputMode_TouchyClick": "Houd knop ingedrukt voor zolang als hij wordt aangeraakt",
   "SourceInputMode_ButtonModeInputForce_Click": "Klik genereren van:",
   "SourceInputMode_Grab": "Pakken",
   "SourceInputMode_CapsenseEnableThreshold": "Drempel CapSense aan:",
@@ -383,10 +383,10 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "Niet toegewezen",
   "BindingUI_InputDebugger": "Invoerdebugger",
-  "InputDebugger_SelectApplication": "Select a running application",
-  "InputDebugger_WaitingForApp": "Waiting for update from application",
+  "InputDebugger_SelectApplication": "Uit te voeren toepassing kiezen",
+  "InputDebugger_WaitingForApp": "Wachten op toepassingsupdate",
   "InputDebugger_ActiveActionSets": "Actieve actiesets",
-  "InputDebugger_NoActiveActionSets": "Application has no active action sets",
+  "InputDebugger_NoActiveActionSets": "Toepassing heeft geen actieve actiesets",
   "InputDebugger_None": "Geen",
   "InputDebugger_ActionSetName": "Actieset",
   "InputDebugger_SecondaryActionSetName": "Secundaire actieset",
@@ -394,7 +394,7 @@
   "InputDebugger_Priority": "Prioriteit",
   "InputDebugger_ActionManifestFailed": "Kan actiemanifest niet laden",
   "InputDebugger_ActionManifestLoading": "Actiemanifest wordt geladen",
-  "InputDebugger_NoActions": "Application has no actions",
+  "InputDebugger_NoActions": "Toepassing heeft geen acties",
   "InputDebugger_FilterDetails": "Filterdetails",
   "InputDebugger_FilterState_Title": "Filterstatus van %1$s",
   "InputDebugger_Source": "Bron:",
