--- a/resources/webinterface/dashboard/localization/dashboard_danish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_danish.json
@@ -39,7 +39,7 @@
   "Return_To_Home": "Tilbage til startside",
   "Controller_Bindings": "Controller-bindinger",
   "App_Video_Settings": "Videoindstillinger",
-  "Desktop": "Stationær computer",
+  "Desktop": "Skrivebord",
   "Desktop_X": "Stationær computer %1$s",
   "ShowKeyboardLabel": "Tastatur",
   "ShowKeyboardTooltip": "Vis tastatur",
