--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -25,7 +25,7 @@
 	"VRMonitor_Overview_QuickLinks_Knock": "Toc toc",
 	"VRMonitor_Overview_QuickLinks_Knock_Desc": "Chamar a atenção do utilizador do headset",
 	"VRMonitor_Overview_QuickLinks_RoomSetup": "Preparação de cômodo",
-	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Configurar os limites do chaperone",
+	"VRMonitor_Overview_QuickLinks_RoomSetup_Desc": "Configurar os limites do Chaperone",
 	"VRMonitor_Overview_QuickLinks_Tutorial": "Tutorial do SteamVR",
 	"VRMonitor_Overview_QuickLinks_Tutorial_Desc": "Aprenda a usar o seu headset de RV",
 	"SystemStatus_FrameRate_Good": "Boa taxa de quadros",
@@ -183,12 +183,12 @@
 	"Settings_Camera_ShowOnController_Desc": "Ativa a janela de uma câmara anexada ao seu controle quando o menu principal estiver aberto.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Exibir câmera nos limites do cômodo",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Visualização do cômodo",
+	"Settings_Camera_AllowCameraForRoomView": "Visualização de cômodo",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Clique duas vezes no botão \"System\" a qualquer momento para acessar a visualização de cômodo",
 	"Settings_Camera_Compatibility": "Taxa de câmara",
 	"Settings_Camera_Rate_Hz": "Taxa da câmara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Caso enfrente perda de rastreamento, tente usar uma taxa diferente, desativar a câmera ou conectar a outra porta USB.",
-	"Settings_Camera_RoomViewStyle": "Estilo de visualização do cômodo",
+	"Settings_Camera_RoomViewStyle": "Estilo da visualização de cômodo",
 	"Settings_Camera_RoomViewStyle_EdgeA": "Silhuetas coloridas",
 	"Settings_Camera_RoomViewStyle_EdgeB": "Fantasmas coloridos",
 	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translúcido",
