--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -12,7 +12,7 @@
 	"Settings_Controller_DefaultBinding": "기본",
 	"Settings_Controller_CustomBinding": "사용자 지정",
 	"Settings_ThumbstickDeadzone_Text": "엄지스틱 데드존",
-	"Settings_ThumbstickDeadzone_Desc": "모든 엄지스틱에서 데드존 조정하기.",
+	"Settings_ThumbstickDeadzone_Desc": "모든 엄지스틱의 데드존 조정하기.",
 	"Settings_DominantHand": "주로 쓰는 손",
 	"Settings_DominantHand_Left": "왼손",
 	"Settings_DominantHand_Right": "오른손",
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "헤드셋",
 	"Settings_Audio_Manual": "수동",
 	"Settings_Audio_Mirroring_Label": "오디오 미러링",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "음량 미러링 별도 제어 (베타)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "미러링 음량 별도 제어 (베타)",
 	"Settings_Audio_Default": "시스템 기본값",
 	"Settings_Audio_Current_Setting_Unknown": "(현재, 선택한 디바이스는 존재하지 않습니다)",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 오디오 게인 감소",
@@ -73,12 +73,12 @@
 	"Advanced_AllowSavingOfTimingInfo": "시간 정보 저장 허용",
 	"Advanced_AutoSaveTimingInfoOnExit": "종료 시 시간 정보 자동 저장",
 	"Settings_EnableWebHelperDebugger": "웹 도움말 디버거 활성화",
-	"Settings_EnableWebHelperDebuggerDesc": "Chromium 개발자 도구와 디버거를, 내장되어 있는 Chromium 페이지에 포함하기 위해 디버깅 서버를 사용할 수 있습니다.",
+	"Settings_EnableWebHelperDebuggerDesc": "Chromium 개발자 도구와 디버거를 내장된 Chromium 페이지에 포함하기 위해 디버깅 서버를 활성화합니다. Perforce 빌드에서 항상 활성화되어 있습니다.",
 	"Advanced_PerfGraphInHMD": "헤드셋에 GPU 성능 그래프 표시하기",
 	"Advanced_SaveFrameDataNow": "프레임 데이터 저장",
 	"Explanation_DisableEnhancedPowerManagement": "알 수 없는 이유로 추적이 끊기거나 무선 컨트롤러가 페어링되지 못한다면, SteamVR USB 장치에 대한 Windows의 강화된 전원 관리를 비활성화 하세요. ",
 	"Explanation_QuickCalibrate": "방 설정을 빠르게 다시 설정해줍니다. 서있는 자세와 룸 스케일 VR에 대한 새로운 경계가 플레이 구역 바닥에 형성되어 헤드셋 중심에 나타나게 됩니다.",
-	"Explanation_RebootVive": "헤드셋을 초기화합니다. USB 관련 헤드셋 문제가 해결될 수 있습니다.",
+	"Explanation_RebootVive": "헤드셋을 초기화합니다. USB 관련 헤드셋 문제를 해결할 수 있습니다.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "드라이버를 다시 설치하려면 SteamVR에 관련된 모든 USB 장치를 이 시스템에서 제거하세요.",
 	"Explanation_ResetDismissableWarnings": "임시 경고는 초기화되며 필요에 따라 다시 표시됩니다.",
 	"MenuAction_DisableEnhancedPowerManagement": "전원 관리 비활성화",
@@ -151,7 +151,7 @@
 	"Settings_Advanced_Supersampling_Header": "해상도 렌더링",
 	"Settings_Advanced_Supersampling_Warning": "아래의 설정은 자동 설정을 재정의하고 모든 애플리케이션에 영향을 미칩니다. 특정 애플리케이션의 해상도 변경은 '애플리케이션 설정'에서 진행하세요.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
-	"Settings_Advanced_SupersamplingManualOverride": "해상도 변경 사항 활성화",
+	"Settings_Advanced_SupersamplingManualOverride": "해상도 조정 활성화",
 	"Settings_Advanced_Supersampline_ResolutionPerEye": "한쪽 눈당 해상도",
 	"Explanation_Supersampling_Header": "SteamVR이 사용자의 GPU 성능에 맞춰 자동으로 애플리케이션의 해상도를 설정합니다.",
 	"Explanation_Supersampling": "*일부 애플리케이션은 설정을 적용하려면 다시 시작해야 합니다.",
@@ -210,7 +210,7 @@
 	"Settings_Appearance_Background": "배경",
 	"Settings_Appearance_Background_NoSteam": "Steam을 실행해 추가 배경이 있는지 확인하세요.",
 	"Settings_Appearance_Background_Select": "배경 바꾸기",
-	"Settings_Appearance_BackgroundDesc": "기본 공간을 위한 배경을 고르세요",
+	"Settings_Appearance_BackgroundDesc": "기본 공간의 배경을 고르세요",
 	"Settings_Appearance_UseDomeProjection": "돔 프로젝션 사용",
 	"Settings_Appearance_UseDomeProjectionDesc": "배경 이미지의 투영 스타일을 변경합니다. 어떤 배경에서는 몰입감을 더 높이기 위해 이 기능을 사용하기도 합니다. 사용 중인 배경에 왜곡 현상이 나타나면 이 기능을 사용해 보세요.",
 	"Settings_Appearance_DomeCameraHeight": "카메라 높이",
@@ -303,11 +303,11 @@
 	"Settings_ViveTrackers": "Vive 트래커",
 	"Settings_ViveTracker_Role": "트래커 유형",
 	"Settings_ViveTracker_Hand": "손",
-	"Settings_ViveTracker_Identify_NotConnected": "Vive 트래커가 연결되어 있지 않음.",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive 트래커가 연결되어 있지 않습니다.",
 	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive 트래커가 인식되지 않습니다.",
 	"Settings_ViveTracker_Connected": "연결 되었습니다",
 	"Settings_ViveTracker_Disconnected": "연결이 끊겼습니다",
-	"Settings_PerApplication_VideoSettings": "어플리케이션별 비디오 설정",
+	"Settings_PerApplication_VideoSettings": "애플리케이션별 비디오 설정",
 	"Settings_ChooseStartupOverlayApps": "시작 오버레이 앱 선택",
 	"Settings_StartTheseOverlayAppsOnLaunch": "실행 시 다음 오버레이 앱 시작:",
 	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "발견된 오버레이 앱이 없습니다",
@@ -331,5 +331,5 @@
 	"Settings_Drivers_UnblockAllTip": "참고: 한 번에 하나의 애드온을 차단 해제하고 테스트할 것을 권장합니다.",
 	"Settings_Drivers_SomeBlocked": "최근 크래시로 인해 일부 SteamVR 애드온이 자동 차단되었습니다.",
 	"TestControllerTitle": "컨트롤러 테스트 %1$s",
-	"TestController_NoController": "컨트롤러 켜서 테스트하기"
+	"TestController_NoController": "컨트롤러를 켜서 테스트하기"
 }
