--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -179,22 +179,22 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opción permitirá especificar una frecuencia de actualización diferente de la preferencia global para esta aplicación.",
 	"Settings_MimeTypes_Pancake_Header": "Selecciona una aplicación para lanzar aplicaciones de 2D en",
 	"Settings_Camera_EnableCamera": "Activar cámara",
-	"Settings_Camera_ShowOnController": "Show Camera on Controller",
-	"Settings_Camera_ShowOnController_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
+	"Settings_Camera_ShowOnController": "Mostrar cámara en el control",
+	"Settings_Camera_ShowOnController_Desc": "Activa una ventana de cámara conectada a tu control cuando el menú principal está arriba.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostrar cámara en los límites de la habitación",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Room View",
+	"Settings_Camera_AllowCameraForRoomView": "Vista de habitación",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accede a la vista de la habitación en cualquier momento haciendo doble clic en el botón Sistema",
 	"Settings_Camera_Compatibility": "Velocidad de la cámara",
 	"Settings_Camera_Rate_Hz": "Velocidad de la cámara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Si experimentas pérdidas de seguimiento puede que te interese reducir la velocidad de la cámara, desactivarla o probar con otro puerto USB.",
-	"Settings_Camera_RoomViewStyle": "Room View Style",
-	"Settings_Camera_RoomViewStyle_EdgeA": "Colored Edges",
-	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
-	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
-	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
-	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
-	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_Camera_RoomViewStyle": "Estilo de vista de habitación",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Bordes coloreados",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Fantasmas coloreados",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Paso translúcido",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Paso opaco",
+	"Settings_Camera_RoomView3D_Experimental": "La vista de la habitación en 3D es experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vista de habitación en 3D no es compatible con este visor.",
 	"Settings_CameraTest": "Prueba de cámara y rendimiento",
 	"Settings_StartCameraTest": "Iniciar prueba",
 	"CameraTest_CheckingCamera": "Comprobando la cámara...",
