--- a/resources/webinterface/dashboard/localization/webhelper_latam.json
+++ b/resources/webinterface/dashboard/localization/webhelper_latam.json
@@ -15,8 +15,8 @@
 	"Button_Retry": "Reintentar",
 	"Settings": "Configuración",
 	"PowerMenuResetSeatedPosition": "Restablecer posición sentado",
-	"PowerMenuResetStandingPosition": "Reset Standing Position",
-	"Resetting_Countdown": "Resetting...",
+	"PowerMenuResetStandingPosition": "Restablecer posición de pie",
+	"Resetting_Countdown": "Restableciendo...",
 	"PowerMenuTurnOffController": "Apagar el control",
 	"PowerMenuQuitSceneApp": "Salir de %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Salir de la aplicación",
