--- a/resources/webinterface/dashboard/localization/webhelper_romanian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_romanian.json
@@ -15,7 +15,7 @@
 	"Button_Retry": "Încearcă din nou",
 	"Settings": "Setări",
 	"PowerMenuResetSeatedPosition": "Resetează poziția din șezut",
-	"PowerMenuResetStandingPosition": "Reset Standing Position",
+	"PowerMenuResetStandingPosition": "Resetează poziția din picioare",
 	"Resetting_Countdown": "Resetting...",
 	"PowerMenuTurnOffController": "Oprește controlerul",
 	"PowerMenuQuitSceneApp": "Ieși din %1$s",
