--- a/resources/webinterface/dashboard/localization/webhelper_turkish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_turkish.json
@@ -15,7 +15,7 @@
 	"Button_Retry": "Yeniden Dene",
 	"Settings": "Ayarlar",
 	"PowerMenuResetSeatedPosition": "Oturma Pozisyonunu Sıfırla",
-	"PowerMenuResetStandingPosition": "Reset Standing Position",
+	"PowerMenuResetStandingPosition": "Ayakta Durma Pozisyonunu Sıfırla",
 	"Resetting_Countdown": "Resetting...",
 	"PowerMenuTurnOffController": "Kontrolcüyü Kapat",
 	"PowerMenuQuitSceneApp": "Çıkış: %1$s",
