--- a/resources/webinterface/dashboard/localization/bindingui_korean.json
+++ b/resources/webinterface/dashboard/localization/bindingui_korean.json
@@ -88,12 +88,12 @@
   "SourceInputMode_TouchActivateThreshold_tooltip": "터치 동작이 true를 반환하기 위해 반드시 충족해야 하는 임계값.",
   "SourceInputMode_ClickDeactivateThreshold_tooltip": "클릭 동작이 false를 반환하기 위해 초과해서는 안되는 임계값.",
   "SourceInputMode_TouchDeactivateThreshold_tooltip": "터치 동작이 false를 반환하기 위해 초과해서는 안되는 임계값.",
-  "SourceInputMode_OverlapPercent_tooltip": "The percentage of side to side overlap that the NESW zones will have.",
-  "SourceInputMode_DeadzonePercent_tooltip": "The percentage from the center that the stick will need to pass to engage.",
+  "SourceInputMode_OverlapPercent_tooltip": "동서남북 영역에서 좌우 중첩 비율을 나타냅니다.",
+  "SourceInputMode_DeadzonePercent_tooltip": "스틱이 활성화되기 위해 중심으로부터 움직여야 하는 비율입니다.",
   "SourceInputMode_StickyDpad_tooltip": "한 구역으로 스틱을 실행한 경우, 실수로 스틱을 다른 방향으로 움직인다 하더라도 스틱을 해제하기 전까지는 실행되지 않습니다. (예를 들어, 스틱을 북쪽으로 밀면 북쪽으로 실행하게 되며, 스틱을 서쪽으로 민다고 하더라도 스틱을 해제하기 전까지 그대로 북쪽이 유지됨)",
   "SourceInputMode_LongPressDelay_tooltip": "롱클릭이 실행되기 전에 버튼을 누르고 있어야 하는 시간.",
   "SourceInputMode_DoublePressDelay_tooltip": "첫 번째 클릭의 종료와 두 번째 클릭의 시작 사이의 최대 시간.",
-  "SourceInputMode_DeadZone_tooltip": "The percentage from the center that the zones will need to pass to trigger.",
+  "SourceInputMode_DeadZone_tooltip": "데드존이 트리거링되기 위해 중심으로부터 통과해야 하는 비율입니다.",
   "SourceInputMode_InvertYAxis_tooltip": "(예, -0.75 값은 0.75이 됨)",
   "SourceInputMode_InvertXAxis_tooltip": "(예, -0.75 값은 0.75이 됨)",
   "SourceInputMode_StickyClick_tooltip": "엄지스틱을 한쪽으로 기울인 상태에서 스틱을 계속 클릭",
@@ -104,10 +104,10 @@
   "SourceInputMode_CapsenseEnableThreshold_tooltip": "손가락이 그립에 가까이 있기 때문에 잡기를 활성화하는 시점.",
   "SourceInputMode_GrabThreshold_tooltip": "정전식 센서와 압력 센서에 대한 합쳐진 활성화 임계값.",
   "SourceInputMode_ReleaseThreshold_tooltip": "정전식 센서와 압력 센서에 대한 합쳐진 비활성화 임계값.",
-  "SourceInputMode_ForceHoldThreshold_tooltip": "The level of pressure that must be applied to activate the action. (capsense usually happens first)",
+  "SourceInputMode_ForceHoldThreshold_tooltip": "동작을 활성화하기 위해 반드시 적용되어야 하는 압력 레벨입니다. (일반적으로 용량 센서가 먼저 활성화됩니다)",
   "SourceInputMode_ForceReleaseThreshold_tooltip": "동작을 비활성화하기 위해 해제해야 하는 압력 레벨",
-  "SourceInputMode_DowngradeSpeed_tooltip": "The maximum speed (m/s) your controller can be moving at to maintain a grab after you had passed the force grab threshold but now are only passing the capsense threshold.",
-  "SourceInputMode_DropSpeed_tooltip": "The minimum speed (m/s) your controller can be moving to force a drop when you have released pressure but haven't passed the cap sense deactivation threshold.",
+  "SourceInputMode_DowngradeSpeed_tooltip": "압력 센서 임계값을 이미 통과하였고 정전식 센서 임계값을 통과할 때 컨트롤러의 이동을 유지하기 위해 컨트롤러가 움직이는 최대 속도 (m/s)를 의미합니다.",
+  "SourceInputMode_DropSpeed_tooltip": "압력을 낮추었지만 정전식 센서 비활성화 임계값에 이르지 않았을 때 컨트롤러를 움직여 속도를 강제로 낮출 수 있는 최소의 속도 (m/s)를 의미합니다.",
   "SourceInputMode_ScalarValue_tooltip": "부울 값에 따라 아날로그 동작 설정 (예, A 버튼이 눌러지면 트리거 당기기를 1로 설정)",
   "SourceInputMode_ScalarOnX_tooltip": "이 컨트롤이 실행될 때 설정하는 아날로그 X 값. (예, 버튼 누르기)",
   "SourceInputMode_ScalarOffX_tooltip": "이 컨트롤이 실행되지 않을 때 설정하는 아날로그 X 값. (예, 버튼 누르기 해제)",
@@ -117,48 +117,48 @@
   "SourceInputMode_ScalarOffZ_tooltip": "이 컨트롤이 실행되지 않을 때 설정하는 아날로그 Z 값. (예, 버튼 누르기 해제)",
   "SourceInputMode_HapticAmplitude_tooltip": "햅틱의 강도.",
   "SourceInputMode_HapticDuration_tooltip": "햅틱의 지속 기간.",
-  "SourceInputMode_HapticFrequency_tooltip": "How often the haptic will hit during the duration.",
+  "SourceInputMode_HapticFrequency_tooltip": "지속 기간 동안 햅틱이 얼마나 자주 발생하는 지를 나타냅니다.",
   "SourceInputMode_ScrollMode_tooltip": "사용하고 싶은 스크롤의 종류 (트랙패드 또는 마우스휠)",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio_tooltip": "트랙패드의 사용가능한 표면의 가로 세로 비율. (가로/세로)",
   "SourceInputMode_SmoothScroll_Multiplier_tooltip": "한 번 움직일 때 스크롤 양.",
   "SourceInputMode_SmoothScroll_AccelerationPower_tooltip": "스크롤 증가 속도.",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad_tooltip": "How many times should the haptic fire when sliding your finger over the length of the touchpad.",
-  "SourceInputMode_SmoothScroll_StartDistance_tooltip": "The minimum amount you need to scroll for a value to be reported.",
-  "SourceInputMode_SmoothScroll_MinThrowVelocity_tooltip": "The minimum velocity you can flick the touchpad.",
-  "SourceInputMode_SmoothScroll_MaxScrollVelocity_tooltip": "The max speed that the control can scroll.",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad_tooltip": "터치패드의 길이를 따라 손가락을 슬라이드할 때 햅틱 피드백이 트리거되는 빈도를 나타냅니다.",
+  "SourceInputMode_SmoothScroll_StartDistance_tooltip": "값이 보고되기 위해 스크롤해야 하는 최소의 양입니다.",
+  "SourceInputMode_SmoothScroll_MinThrowVelocity_tooltip": "터치패드를 클릭할 수 있는 최소 속도를 의미합니다.",
+  "SourceInputMode_SmoothScroll_MaxScrollVelocity_tooltip": "컨트롤의 최대 스크롤 속도를 의미합니다.",
   "SourceInputMode_SmoothScroll_Deceleration_tooltip": "스크롤 감소 속도.",
   "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage_tooltip": "속도 평균화를 위해 필요한 이전 속도의 개수.",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage_tooltip": "The maximum number of previous velocities to take into account for speed.",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity_tooltip": "The maximum speed a flick can have.",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage_tooltip": "속도를 계산할 때 고려할 수 있는 이전 속도의 최대 개수를 의미합니다.",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity_tooltip": "각 스크롤 클릭의 최대 속도를 뜻합니다.",
   "SourceInputMode_SmoothScroll_EdgeScrollThreshold_tooltip": "'엣지 스크롤' 실행을 위해 엣지 근접 정도",
   "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias_tooltip": "수직 엣지 편차 정도",
   "SourceInputMode_SmoothScroll_EdgeScrollVelocity_tooltip": "엣지 스크롤 속도.",
   "SourceInputMode_SmoothScroll_EdgeMinSwipe_tooltip": "엣지 스크롤 모드 실행을 위해 스크롤해야 하는 최소 양.",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio_tooltip": "수평 스크롤 실행에 필요한 최소 측면 이동 비율.",
   "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude_tooltip": "스크롤을 시작하기 위해 컨트롤에 변경해야 하는 최소의 양.",
-  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor_tooltip": "How much each tick will scroll.",
-  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart_tooltip": "Get a haptic pulse on finger contact.",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock_tooltip": "Locks scrolling direction to overall movement (ex. stops a backwards scroll when flicking).",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "Distance required before first scroll tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "Distance required for subsequent scroll ticks.",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal_tooltip": "Distance required to reverse scroll direction.",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch_tooltip": "Direct manipulation sensitivity of the first scroll tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove_tooltip": "Direct manipulation sensitivity of the subsequent ticks.",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal_tooltip": "Direct manipulation sensitivity when reversing a scroll.",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled_tooltip": "Turn on or off scroll flicks.",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold_tooltip": "The minimum distance for a flick to be recognized.",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier_tooltip": "The power of flick generated scrolls.",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed_tooltip": "The speed at which flicks slow down.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "Enable continuous scrolling after sliding to edges and holding.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "The power of each held scroll tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "How fast a held scroll will tick.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "The area of the trackpad at the top that scroll holds will engage.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "The area of the trackpad at the bottom that scroll holds will engage.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "Generate haptic pulses for held scroll ticks.",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "How fast to scroll.",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor_tooltip": "How much to scroll each increment.",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "The side to side percentage that the stick will not scroll.",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "The top to bottom percentage that the stick will not scroll.",
+  "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor_tooltip": "각 클릭당 스크롤되는 양을 나타냅니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart_tooltip": "손가락이 접촉하면 촉각 펄스가 제공됩니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock_tooltip": "스크롤 방향을 전체 이동 방향으로 고정합니다. (예, 클릭 시 역 방향 스크롤을 멈춤)",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "첫 번째 스크롤 클릭이 실행되기 위해 필요한 거리입니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "다음 스크롤 클릭이 실행되기 위해 필요한 거리입니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal_tooltip": "스크롤 방향을 반전하는 데 필요한 거리입니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch_tooltip": "첫 스크롤 클릭을 활성화하는 직접 조작의 감도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove_tooltip": "다음 클릭을 활성화하는 직접 조작의 감도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal_tooltip": "스크롤을 반전할 때의 직접 조작 감도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled_tooltip": "터치 스크롤을 켜거나 끄세요.",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold_tooltip": "각 스크롤 클릭이 인식되는 최소의 거리입니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier_tooltip": "터치로 생성되는 스크롤의 강도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed_tooltip": "터치가 느려지는 속도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "가장자리로 밀어서 누른 후에 연속 스크롤을 활성화합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "각 스크롤 클릭이 유지되는 강도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "각 스크롤이 클릭되는 속도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "스크롤 홀드를 활성화하는 트랙패드의 상단 영역을 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "스크롤 홀드를 활성화하는 트랙패드의 하단 영역을 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "스크롤 클릭을 유지하는 동안 촉각 펄스를 생성합니다.",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor_tooltip": "스크롤하는 속도를 의미합니다.",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor_tooltip": "각 증가마다 스크롤하는 양입니다.",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal_tooltip": "조이스틱이 스크롤되지 않는 수평 영역의 비율을 나타냅니다.",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical_tooltip": "조이스틱이 스크롤되지 않는 수직 영역의 비율을 나타냅니다.",
   "SourceInputMode_ScrollMode": "스크롤 모드:",
   "SourceInputMode_ScrollMode_Smooth": "부드럽게(트랙패드 등)",
   "SourceInputMode_ScrollMode_Discrete": "불연속(마우스 휠 등)",
@@ -292,7 +292,7 @@
   "BindingUI_EditPageTitle": "%1$s 수정",
   "BindingUI_ViewPageTitle": "%1$s 보기",
   "BindingUI_PageSubTitle": "%2$s의 %1$s에 대한 %3$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%2$s의 %1$s (%4$s)에 대한 %3$s",
   "BindingUI_BindingType_autosave": "로컬 변경 사항",
   "BindingUI_BindingType_personal": "개인 바인딩",
   "BindingUI_BindingType_developer": "개발자 바인딩",
@@ -310,7 +310,7 @@
   "BindingUI_List_Delete": "삭제",
   "BindingUI_List_Edit": "수정",
   "BindingUI_List_View": "보기",
-  "BindingUI_List_Select": "Activate",
+  "BindingUI_List_Select": "활성화",
   "BindingUI_List_LastUpdated": "최근 업데이트: ",
   "BindingUI_List_MinutesPlayed": "총 %1$s분 플레이",
   "BindingUI_List_MinutesPlayedThisMonth": "지난 30일 동안 총 %1$s분 플레이",
@@ -384,33 +384,33 @@
   "InputDebugger_Unbound": "바인딩 안 됨",
   "BindingUI_InputDebugger": "입력 디버거",
   "InputDebugger_SelectApplication": "실행 중인 애플리케이션 선택",
-  "InputDebugger_WaitingForApp": "Waiting for update from application",
-  "InputDebugger_ActiveActionSets": "Active Action Sets",
-  "InputDebugger_NoActiveActionSets": "Application has no active action sets",
+  "InputDebugger_WaitingForApp": "애플리케이션의 업데이트를 기다리는 중",
+  "InputDebugger_ActiveActionSets": "활성 액션 세트",
+  "InputDebugger_NoActiveActionSets": "애플리케이션에 활성 동작 세트가 없습니다",
   "InputDebugger_None": "없음",
   "InputDebugger_ActionSetName": "액션 세트",
-  "InputDebugger_SecondaryActionSetName": "Secondary Action Set",
-  "InputDebugger_Device": "Restrict to Device",
+  "InputDebugger_SecondaryActionSetName": "보조 동작 세트",
+  "InputDebugger_Device": "기기에 한정",
   "InputDebugger_Priority": "중요도",
   "InputDebugger_ActionManifestFailed": "동작 매니페스트를 불러오지 못했습니다",
   "InputDebugger_ActionManifestLoading": "동작 매니페스트를 불러오는 중입니다",
-  "InputDebugger_NoActions": "Application has no actions",
-  "InputDebugger_FilterDetails": "Filter details",
-  "InputDebugger_FilterState_Title": "Filter state for %1$s",
+  "InputDebugger_NoActions": "애플리케이션에 동작 세트가 없습니다",
+  "InputDebugger_FilterDetails": "필터 정보",
+  "InputDebugger_FilterState_Title": "%1$s의 필터링 상태",
   "InputDebugger_Source": "소스:",
   "InputDebugger_Binding": "바인딩:",
-  "InputDebugger_Active": "Active:",
-  "InputDebugger_ActiveOrigin": "Origin:",
+  "InputDebugger_Active": "사용:",
+  "InputDebugger_ActiveOrigin": "원점:",
   "InputDebugger_UpdateTime": "최근 업데이트:",
   "InputDebugger_Value": "값:",
-  "InputDebugger_ActionUnbound": "Action is unbound",
+  "InputDebugger_ActionUnbound": "액션이 바인딩 되지 않음",
   "InputDebugger_Parameters": "매개 변수",
   "InputDebugger_Inputs": "입력:",
   "InputDebugger_Outputs": "출력:",
-  "InputDebugger_FilterType": "Type:",
-  "InputDebugger_PriorityValue": "(Priority %1$s)",
-  "InputDebugger_Suppressed": "Suppressed",
-  "InputDebugger_Priority_Overlay": "Global + %1$s",
+  "InputDebugger_FilterType": "유형:",
+  "InputDebugger_PriorityValue": "(우선순위 %1$s)",
+  "InputDebugger_Suppressed": "억제",
+  "InputDebugger_Priority_Overlay": "전역 + %1$s",
   "BindingUI_WindowTitle_ControllerSettings": "컨트롤러 설정",
   "BindingUI_WindowTitle_ControllerBinding": "컨트롤러 바인딩",
   "BindingUI_WindowTitle_DisplaySettings": "디스플레이 설정",
